* Sat Sep 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix problem with attempted upgrades to GridHTTP when
  already on the HTTP virtual server.
* Fri Sep 9 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- GRST_DESTINATION_TRANSLATED and GRST_DESTINATION_PERM
  environment variables, for use with CGI-based COPY.
- Rework GridHTTP (ex-Downgrade) code to store method
  and URI with permission, rather than credentials.
- Restrict use of GridSiteOnetimesDir to main server.
* Fri Aug 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fix for HTTP PUT lack-of-truncation bug found by 
  Mike Jones, and support for HTTP/WebDAV MOVE.
- Add MOVE support to htcp and update htcp manpage.
- Unset CURLOPT_SSL_VERIFYPEER in htcp etc when using
  --noverify option.
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.11 ====
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Tidy up gsexec vs GridSiteDiskMode
* Fri Jun 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.10 ====
* Wed Jun 8 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GridSiteDiskMode Apache directive to set file
  permissions.
- Add GridSiteExecMethod and GridSiteUserGroup to 
  configure suexec or extended gsexec functionality.
* Thu Jun 2 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- HTML improvements for Bug #4083
- Note that GridSite currently doesn't work with SHM
  SSL session cache, in httpd-*.conf and config guide.
- Add GridSiteExecMethod for use with gsexec
* Thu May 26 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Include gsexec, a drop-in replacement for suexec,
  which can do suexec execution of CGI programs or
  pool-account mapping based on client DN.
* Tue May 24 2005 Shiv Kaushal <shiv@hep.man.ac.uk>
- Add XACML support to GACL code in libgridsite.
* Tue May 24 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.9 ====
* Mon Apr 25 2005 Andrew McNab <Andrew.McNab@man.ac.uk>