@@ -23,7 +23,7 @@
 ## in /etc/grid-security/dn-lists/
 ##
 ## To start serving files, make a directory /var/www/htdocs owned by
-## nobody.nobody, including the file .gacl containing:
+## apache.apache, including the file .gacl containing:
 ##
 ## <gacl>
 ## <entry>
@@ -87,8 +87,8 @@ LoadModule dir_module		/usr/lib/httpd/modules/mod_dir.so
 TypesConfig /etc/mime.types
 
 # User and group who will own files created by Apache
-User  nobody
-Group nobody
+User  apache
+Group apache
 
 DocumentRoot "/var/www/htdocs"
 
