@@ -25,7 +25,7 @@
 ## (Lists in /etc/grid-security/dn-lists/ override lists elsewhere.)
 ##
 ## To start serving files, make a directory /var/www/htdocs owned by
-## nobody.nobody, including the file .gacl containing:
+## apache.apache, including the file .gacl containing:
 ##
 ## <gacl>
 ## <entry>
@@ -95,8 +95,8 @@ LoadModule cgi_module		/usr/lib/httpd/modules/mod_cgi.so
 TypesConfig /etc/mime.types
 
 # User and group who will own files created by Apache
-User  nobody
-Group nobody
+User  apache
+Group apache
 
 DocumentRoot "/var/www/htdocs"
 
