@@ -1,3 +1,10 @@
+* Tue Sep 13 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Fix bug #10031 submitted by Fabrizio Pacini 
+  <fabrizio.pacini@cern.ch> (invalid free in 
+  GRSTgaclAclLoadFile if ACL format not valid.)
+* Mon Sep 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Accept GRIDHTTP_ONETIME when passed in HTTP query
+  (still overridden by a GRIDHTTP_ONETIME in a cookie.)
 * Sat Sep 10 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Fix problem with attempted upgrades to GridHTTP when
   already on the HTTP virtual server.
